# ai-pattarai

./: .gitignore
asuran/: pyproject.toml
asuran/src/asuran/: __init__.py  __main__.py
asuran/src/asuran/cli/: app.py  formatter.py  repl.py
asuran/src/asuran/core/: context.py  errors.py  executor.py  plugin.py  registry.py  types.py
asuran/src/asuran/domains/boot/: plugin.py
asuran/src/asuran/domains/cpu/: plugin.py
asuran/src/asuran/domains/crypto/: plugin.py
asuran/src/asuran/domains/disk/: plugin.py
asuran/src/asuran/domains/dns_domain/: plugin.py
asuran/src/asuran/domains/filesystem/: plugin.py
asuran/src/asuran/domains/hardware/: plugin.py
asuran/src/asuran/domains/kernel/: plugin.py
asuran/src/asuran/domains/memory/: plugin.py
asuran/src/asuran/domains/network/: plugin.py
asuran/src/asuran/domains/process/: plugin.py
asuran/src/asuran/domains/services/: plugin.py
asuran/src/asuran/domains/software/: plugin.py
asuran/src/asuran/domains/time/: plugin.py
asuran/src/asuran/engine/: experiment.py  hypothesis.py  step.py
asuran/src/asuran/safety/: killswitch.py  limits.py  rollback.py  state.py
asuran/src/asuran/scheduler/: random_chaos.py  scheduler.py
asuran/src/asuran/system/: cgroups.py  proc.py  sysfs.py
asuran/src/asuran/telemetry/: audit.py  database.py  logger.py  metrics.py
asuran/tests/: conftest.py  test_core.py  test_cpu.py  test_disk.py  test_fs.py  test_kern.py  test_mem.py  test_net.py  test_proc.py  test_repl.py  test_safety.py  test_svc.py  test_telemetry.py  test_time.py
vaigAI/: .gitignore  CLAUDE.md  meson.build  meson_options.txt
vaigAI/.claude/commands/: download-artifact.md  jira.md
vaigAI/.github/: copilot-instructions.md
vaigAI/docs/: ARCHITECTURE.md  CLI.md  README.md  http-test.md  https-test.md  nic-others.md  ping-test.md  tcp-test.md  tls-test.md  udp-test.md
vaigAI/scripts/: setup.sh  test-env.sh
vaigAI/src/: main.c
vaigAI/src/app/: http11.c  http11.h  server.c  server.h
vaigAI/src/common/: types.h  util.c  util.h
vaigAI/src/core/: core_assign.c  core_assign.h  eal_init.c  eal_init.h  ipc.c  ipc.h  mempool.c  mempool.h  tx_gen.c  tx_gen.h  worker_loop.c  worker_loop.h
vaigAI/src/mgmt/: cli.c  cli.h  cli_client.c  cli_server.c  cli_server.h  config_mgr.c  config_mgr.h  mgmt_loop.c  mgmt_loop.h  rest.c  rest.h
vaigAI/src/net/: arp.c  arp.h  ethernet.c  ethernet.h  icmp.c  icmp.h  icmpv6.c  icmpv6.h  ipv4.c  ipv4.h  ipv6.c  ipv6.h  lpm.c  lpm.h  ndp.c  ndp.h  tcp_checksum.h  tcp_congestion.c  tcp_congestion.h  tcp_fsm.c  tcp_fsm.h  tcp_options.c  tcp_options.h  tcp_port_pool.c  tcp_port_pool.h  tcp_snd_buf.c  tcp_snd_buf.h  tcp_tcb.c  tcp_tcb.h  tcp_timer.c  tcp_timer.h  udp.c  udp.h
vaigAI/src/port/: port_init.c  port_init.h  soft_nic.c  soft_nic.h
vaigAI/src/telemetry/: cpu_stats.c  cpu_stats.h  export.c  export.h  histogram.c  histogram.h  log.c  log.h  mem_stats.c  mem_stats.h  metrics.c  metrics.h  output.c  output.h  pktrace.c  pktrace.h
vaigAI/src/tls/: cert_mgr.c  cert_mgr.h  cryptodev.c  cryptodev.h  tls_engine.c  tls_engine.h  tls_session.c  tls_session.h
vaigAI/tests/: arp_test.sh  http_nic.sh  https_nic.sh  manual-tests.sh  one_pcap.sh  ping_veth.sh  server_veth.sh  tcp_tap.sh  tls_nic.sh  udp_veth.sh
vaigAI/tests/manual/: 1a-qemu-mlx5.sh  1b-qemu-i40e.sh  1c-firecracker-tap.sh  1d-container-afxdp.sh  1e-native-afpacket.sh  1f-memif-socat.sh  1g-net-ring.sh  1h-net-null.sh  1i-net-pcap.sh  1j-qemu-virtio.sh  1k-vhost-user.sh  2a-server-afpacket.sh  README.md  common.sh  run_all.sh
vaigAI/tests/proto/: http1.1_suite.sh  tcp_suite.sh  tls_suite.sh
vaigAI/vaigAI/docs/: ARCHITECTURE.md
